--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.18.1
-pandas==1.5.3
-matplotlib==3.7.1
-seaborn==0.12.2
-scikit-learn==1.2.2
-numpy==1.24.2
+streamlit
+pandas
+matplotlib
+seaborn
+scikit-learn
+numpy
